--- a/da-app/src/main/resources/application.properties
+++ b/da-app/src/main/resources/application.properties
@@ -28,10 +28,10 @@ endpoints.cors.max-age=36000
 endpoints.cors.allowed-origins=*
 
 # MySQL connection string properties
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/minion?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false#spring.datasource.username=root
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/minion?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false#spring.datasource.username=root
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 
 spring.datasource.driverClassName=org.postgresql.Driver
